@@ -67,6 +67,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 11363) Make all metadata fields bytea when using Postgres.
 * (bug 11331) Add buildConcat() and use CASE not IF for DB compatibility. Make oldimage 
   cascade delete via image table for Postgres, change fa_storage_key TEXT.
+* (bug 11438) Live Preview chops returned text
 
 === API changes in 1.12 ===
 
